src/test/ui/generic/generic-extern-lifetime.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/generic-extern-lifetime.rs:6:24
   |
LL |    pub fn life2<'b>(x:&'a i32, y:&'b i32);
   |                        ^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/generic-extern-lifetime.rs:8:36
   |
LL |    pub fn life4<'b>(x: for<'c> fn(&'a i32));
   |                                    ^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/generic-extern-lifetime.rs:11:38
   |
LL |    pub fn life7<'b>() -> for<'c> fn(&'a i32);
   |                                      ^^ undeclared lifetime

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0261`.
